--- a/src/index.css
+++ b/src/index.css
@@ -19,19 +19,12 @@ header nav div ul {
   font-size: 15px;
   display: flex;
   flex-direction: column;
-
 }
 
 header nav div ul li {
   gap: 10px;
   padding: 15px;
   display: flex;
-}
-
-h1 {
-  padding: 30px;
-  display: flex;
-  justify-content: center;
 }
 
 
@@ -65,7 +58,7 @@ h1 {
   color: #eee;
 }
 
-.active:hover{
+.active:hover {
   background-color: #218838;
   border-radius: 15px;
 }
@@ -98,7 +91,7 @@ h1 {
 
 .carrito-dropdown li .plus-button,
 .carrito-dropdown li .minus-button {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   border: none;
   padding: 5px 10px;
@@ -116,31 +109,28 @@ h1 {
   width: 100%;
   margin-top: 10px;
   padding: 10px;
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
-
 }
 
 .carrito-dropdown.visible {
-
   margin-top: 20px;
   margin-right: 15px;
 }
 
 #carrito-btn,
 #compraProd {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   padding: 10px;
   border: none;
   cursor: pointer;
   font-size: 16px;
-  
 }
 
 .btn {
   margin-top: 10px;
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   padding: 10px;
   border: none;
@@ -170,7 +160,6 @@ h1 {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   width: 300px;
 }
-
 
 /* Estilos para el modal */
 .modal {
@@ -246,10 +235,8 @@ button:hover {
   margin-top: 20px;
 }
 
-
-
 /* INICIO */
-.inicio-container{
+.inicio-container {
   display: flex;
   justify-content: center;
   margin-top: 20px;
@@ -260,24 +247,23 @@ button:hover {
   align-items: center;
 }
 
-.box-one div{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
+.box-one div {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
 }
 
 .sec-img {
   display: flex;
-    align-items: center;
-    width: 40%;
-    justify-content: center;
+  align-items: center;
+  width: 40%;
+  justify-content: center;
 }
 .sec-img img {
   width: 60%;
   border-radius: 1px;
 }
-
 
 /* PRODUCTOS */
 
@@ -303,43 +289,143 @@ main article {
   display: flex;
   justify-content: center;
   padding: 20px;
-  gap: 30px;
+  gap: 0px;
 }
+
+.texto {
+  margin: 10px 10px;
+  border-radius: 3px;
+  font-size: 17px;
+  background-color: #242424;
+  color: whitesmoke;
+  text-align: center;
+}
+
+h1{
+  padding: 10px;
+  color: #A1EF00;
+}
+
+.texto h2 {
+  padding: 20px;
+}
+
+.texto p {
+  padding: 20px;
+  font-size: 15px;
+}
+
+.sec-productos h1 {
+  font-size: 25px;
+}
+
 .producto {
-  width: 30%;
+  width: 60%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px;
+  text-align: center;
+  padding: 3px;
   gap: 15px;
 }
 
+.producto h2 {
+  font-size: 16px;
+}
+
 .producto img {
-  width: 50%;
+  width: 60%;
 }
 
 .productos {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  place-items: center;
+  gap: 15px;
 }
 
 .botonera {
   display: flex;
   align-items: center;
   gap: 20px;
-  width: 70%;
+  width: 20%;
 }
 
-.sobre-nosotros{
+.btn-comprar {
+  width: 20%;
+}
+
+.sobre-nosotros {
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding: 25px; 
+  padding: 25px;
   gap: 50px;
 }
 
+.detalle-producto {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  padding: 5px;
+  margin-top: 15px;
+}
+
+.detalle-producto img {
+  width: 15%;
+}
+
+/* NOSOTROS */
+
+.nos-alumnos{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 10px;
+  background-color: #242424;
+  color: whitesmoke;
+  text-align: start;
+  border-radius: 2px;
+}
+
+.nos-alumnos .alumno{
+  width: 30%;
+}
+
+.nos-alumnos .alumno img{
+  width: 65%;
+  object-fit: cover;
+}
+
+/* CONTACTOS */
+
+.sec-contactos {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sec-contactos .texto{
+  width: 90%;
+}
+
+.logos {
+  display: flex;
+  
+}
+
+.logos div{
+  display: flex;
+}
+
+.logos div img {
+  margin-top: 40px;
+  width: 25%;
+  padding-bottom: 40px;
+}
 
 /*footer */
 
@@ -373,9 +459,5 @@ footer div img {
 footer div a {
   width: 40%;
   text-decoration: none;
-  color: #A1EF00;
+  color: #a1ef00;
 }
-
-
-
-
