--- a/src/index.css
+++ b/src/index.css
@@ -27,13 +27,12 @@ header nav div ul li {
   display: flex;
 }
 
-
-
 .navbar {
   display: flex;
   justify-content: space-between;
   background-color: #242424;
   color: white;
+  border-radius: 0px 0px 2px 2px;
 }
 
 .navbar ul {
@@ -113,10 +112,7 @@ header nav div ul li {
   color: white;
 }
 
-.carrito-dropdown.visible {
-  margin-top: 20px;
-  margin-right: 15px;
-}
+
 
 #carrito-btn,
 #compraProd {
@@ -149,16 +145,21 @@ header nav div ul li {
 }
 
 .carrito-dropdown.visible {
+  margin-top: 20px;
+  margin-right: 15px;
   display: block;
 }
 
 .carrito-dropdown {
-  display: none;
-  background-color: white;
+  display: none; /* Oculto por defecto */
+  background-color: #f9f9f9;
   border: 1px solid #ddd;
-  padding: 10px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 50px;
+  right: 0;
   width: 300px;
+  padding: 20px;
+  z-index: 1000;
 }
 
 /* Estilos para el modal */
@@ -239,7 +240,8 @@ button:hover {
 .inicio-container {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .box-one {
@@ -271,6 +273,8 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 main article div {
@@ -279,7 +283,6 @@ main article div {
   flex-direction: column;
   background-color: grey;
   width: 30%;
-  padding: 30px;
   gap: 10px;
   border-radius: 5px;
 }
@@ -301,9 +304,9 @@ main article {
   text-align: center;
 }
 
-h1{
+h1 {
   padding: 10px;
-  color: #A1EF00;
+  color: #a1ef00;
 }
 
 .texto h2 {
@@ -313,6 +316,11 @@ h1{
 .texto p {
   padding: 20px;
   font-size: 15px;
+}
+
+.productos {
+  display: flex;
+  flex-direction: column;
 }
 
 .sec-productos h1 {
@@ -380,7 +388,7 @@ h1{
 
 /* NOSOTROS */
 
-.nos-alumnos{
+.nos-alumnos {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -391,11 +399,13 @@ h1{
   border-radius: 2px;
 }
 
-.nos-alumnos .alumno{
+.nos-alumnos .alumno {
   width: 30%;
+  display: flex;
+  justify-content: center;
 }
 
-.nos-alumnos .alumno img{
+.nos-alumnos .alumno img {
   width: 65%;
   object-fit: cover;
 }
@@ -405,26 +415,64 @@ h1{
 .sec-contactos {
   display: flex;
   flex-direction: column;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.sec-contactos .texto {
+  width: 95%;
+}
+
+.sec-contactos .logos {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  place-items: center;
+  gap: 25px;
+}
+
+.sec-contactos .logos .div-logo img {
+  width: 100%;
+}
+
+.sec-contactos .logos .div-logo {
+  background-color: #fff;
+}
+
+.sec-contactos .formulario {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  gap: 20px; 
+  background-color: #242424; 
+  padding: 20px;
+  border-radius: 3px;
 }
 
-.sec-contactos .texto{
-  width: 90%;
+.sec-contactos .formulario .controles {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #1c1c1c; /* Fondo gris oscuro */
+  color: white;
+  font-size: 16px;
 }
 
-.logos {
-  display: flex;
-  
+.sec-contactos .formulario .boton {
+  width: 100%; /* Alineado al tamaño de los inputs */
+  max-width: 400px;
+  padding: 10px;
+  background-color: #a1ef00; /* Verde */
+  color: #2c2c2c;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
-
-.logos div{
-  display: flex;
-}
-
-.logos div img {
-  margin-top: 40px;
-  width: 25%;
-  padding-bottom: 40px;
+.sec-contactos .formulario .boton:hover{
+  background-color: #a1ef00;
 }
 
 /*footer */
@@ -432,32 +480,33 @@ h1{
 footer {
   background-color: #242424;
   color: whitesmoke;
-  text-align: center;
-  height: 25vh;
-}
-
-footer h3 {
-  padding: 10px;
-  font-size: 10px;
+  display: flex;
+  justify-content: center;
+  border-radius: 2px 2px 0px 0px;
   align-items: center;
 }
 
-footer div {
-  padding: 10px;
-  margin: 30px 15px;
+footer .div-categorias,
+footer .div-contactos,
+footer .div-soporte {
+  gap: 13px;
   display: flex;
-  justify-content: space-evenly;
-  gap: 25px;
-  font-size: 13px;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 30%;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
-footer div img {
-  padding-top: 25px;
-  width: 15%;
+footer div h3,
+footer h3 {
+  font-size: 25px;
 }
 
 footer div a {
   width: 40%;
   text-decoration: none;
   color: #a1ef00;
+  font-size: 13px;
 }
