--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,6 @@ header nav div ul li {
   justify-content: space-between;
   background-color: #242424;
   color: white;
-  border-radius: 0px 0px 2px 2px;
 }
 
 .navbar ul {
@@ -41,6 +40,7 @@ header nav div ul li {
   list-style-type: none;
   margin-left: 50px;
   padding: 0;
+  margin: 0;
 }
 
 .navbar ul li {
@@ -357,8 +357,10 @@ h1 {
   display: flex;
   align-items: center;
   gap: 20px;
-  width: 20%;
 }
+
+
+
 
 .btn-comprar {
   width: 20%;
